// =============================================================================
// 시흥가개 DB Schema (DBML)
//
// 코드(`app/models/*.py`) 기준 단방향 동기화. dbdiagram.io 좌측 에디터에
// 그대로 붙여넣어 사용. 동일 내용의 실행 가능한 PostgreSQL DDL 은 schema.sql 참조.
// =============================================================================

Project siheunggage {
  database_type: 'PostgreSQL'
  Note: '시흥시 반려동물 동반 매장 지도 + 중성화 이동 지원 봉사자 매칭 앱 백엔드'
}

// -----------------------------------------------------------------------------
// ENUMS  (app/models/enums.py)
// -----------------------------------------------------------------------------
Enum user_role { USER  VOLUNTEER  ADMIN }
Enum pet_species { DOG  CAT  OTHER }
Enum pet_gender { MALE  FEMALE  UNKNOWN }
Enum volunteer_badge_tier { NONE  SEED  FLOWER  FRUIT  TREE }   // 활동 통계 응답용. DB 컬럼 X (앱에서 derive).
Enum notification_category { VOLUNTEER  MATCH  REVIEW  NEWS  POLICY  SYSTEM }
Enum match_status { WAITING  MATCHING  PROGRESS  DONE }
Enum application_status { PENDING  ACCEPTED  REJECTED }
Enum volunteer_request_status { PENDING  APPROVED  REJECTED }
Enum store_category { CAFE  RESTAURANT  PARK }
Enum store_status { PENDING  APPROVED  REJECTED }
Enum report_type { USER  CHAT }


// =============================================================================
// T0 — MVP 필수 테이블
// =============================================================================

Table users {
  id bigserial [pk, note: '사용자 고유 ID']
  email varchar(255) [not null, unique, note: '로그인 ID (이메일)']
  password_hash varchar(255) [not null, note: '비밀번호 해시 (bcrypt 또는 argon2)']
  nickname varchar(20) [not null, unique, note: '닉네임 (2~20자)']
  phone varchar(20) [note: '연락처 (선택)']
  role user_role [not null, default: 'USER', note: '권한 등급']
  profile_image_url text [note: '프로필 이미지 URL (외부 스토리지)']
  region_si varchar(50) [note: '거주 시 (예: 시흥시)']
  region_dong varchar(50) [note: '거주 동 (예: 정왕동)']
  created_at timestamptz [not null, default: `now()`, note: '가입 시각']
  updated_at timestamptz [not null, default: `now()`, note: '정보 수정 시각']
  deleted_at timestamptz [note: '탈퇴 시각 (soft delete, 30일 후 영구 삭제)']

  indexes {
    role [name: 'idx_users_role_active', note: 'WHERE deleted_at IS NULL']
  }

  Note: '회원 (USER / VOLUNTEER / ADMIN)'
}

Table devices {
  id bigserial [pk, note: '디바이스 레코드 ID']
  user_id bigint [not null, note: '소유 사용자 FK']
  fcm_token text [not null, unique, note: 'Firebase Cloud Messaging 등록 토큰']
  device_name varchar(100) [note: '기기명 (디버깅용, 선택)']
  created_at timestamptz [not null, default: `now()`, note: '최초 등록 시각']
  updated_at timestamptz [not null, default: `now()`, note: '토큰 갱신 시각']

  indexes {
    user_id [name: 'idx_devices_user_id']
  }

  Note: 'FCM 푸시 알림 대상 디바이스 (한 사용자가 여러 기기 가능)'
}

Table refresh_tokens {
  id bigserial [pk, note: '토큰 레코드 ID']
  user_id bigint [not null, note: '소유 사용자 FK']
  device_id bigint [note: '발급된 디바이스 FK (선택)']
  token_hash varchar(64) [not null, unique, note: 'raw refresh token 의 SHA-256 hex 해시 (64자, 원문 미저장)']
  expires_at timestamptz [not null, note: '만료 시각 (발급 + 7일)']
  revoked_at timestamptz [note: '무효화 시각 (로그아웃 시 set)']
  created_at timestamptz [not null, default: `now()`, note: '발급 시각']

  indexes {
    user_id [name: 'idx_refresh_tokens_user_active', note: 'WHERE revoked_at IS NULL']
  }

  Note: '활성 리프레시 토큰 화이트리스트 (멀티 디바이스 로그인)'
}

Table pets {
  id bigserial [pk, note: '반려동물 ID']
  user_id bigint [not null, note: '보호자(회원) FK']
  name varchar(50) [not null, note: '이름']
  species pet_species [not null, note: '종 (DOG/CAT/OTHER)']
  breed varchar(50) [note: '품종 (선택)']
  age smallint [note: '나이 (>= 0, 선택)']
  weight_kg "numeric(5,2)" [note: '체중 kg (> 0, 선택)']
  is_neutered boolean [not null, default: false, note: '중성화 여부']
  gender pet_gender [not null, default: 'UNKNOWN', note: '성별 (MALE/FEMALE/UNKNOWN)']
  photo_url text [note: '사진 URL']
  created_at timestamptz [not null, default: `now()`, note: '등록 시각']
  updated_at timestamptz [not null, default: `now()`, note: '정보 수정 시각']

  indexes {
    user_id [name: 'idx_pets_user_id']
  }

  Note: '회원이 등록한 반려동물 (CHECK: age >= 0, weight_kg > 0)'
}

Table notifications {
  id bigserial [pk, note: '알림 ID']
  user_id bigint [not null, note: '수신자 FK']
  category notification_category [not null, note: '분류']
  title varchar(100) [not null, note: '알림 제목']
  body text [not null, note: '알림 본문']
  link varchar(255) [note: '클릭 시 이동할 in-app deep link 경로 (예: /match/42)']
  read_at timestamptz [note: '읽은 시각 (NULL = 안 읽음, 안읽음 카운트는 read_at IS NULL 로 조회)']
  created_at timestamptz [not null, default: `now()`, note: '생성 시각']

  indexes {
    (user_id, created_at) [name: 'idx_notifications_user_created']
    (user_id, created_at) [name: 'idx_notifications_user_unread', note: 'WHERE read_at IS NULL — 안 읽음 카운트/목록 부분 인덱스']
  }

  Note: '인앱 알림 (FCM 발송과 별개로 목록/배지 표시에 사용)'
}

Table notification_settings {
  user_id bigint [not null, note: '사용자 FK (PK 일부)']
  category notification_category [not null, note: '카테고리 (PK 일부)']
  push_enabled boolean [not null, default: true, note: 'true = push 전송 허용. 행이 없는 카테고리는 ON 으로 간주.']
  updated_at timestamptz [not null, default: `now()`, note: '변경 시각']

  indexes {
    (user_id, category) [pk]
  }

  Note: '카테고리별 push 알림 on/off 설정 (사용자별, 카테고리별 upsert)'
}

Table matches {
  id bigserial [pk, note: '요청 글 ID']
  author_id bigint [not null, note: '작성자 (보호자) FK']
  pet_id bigint [note: '대상 반려동물 FK']
  title varchar(100) [not null, note: '제목']
  content text [not null, note: '본문']
  location "geography(Point, 4326)" [not null, note: '출발/픽업 좌표 (PostGIS Point, SRID 4326)']
  address varchar(255) [note: '사람이 읽는 주소']
  desired_date date [note: '희망 일정 (날짜)']
  desired_time time [note: '희망 시간 (HH:MM, 선택)']
  status match_status [not null, default: 'WAITING', note: 'WAITING → MATCHING → PROGRESS → DONE']
  created_at timestamptz [not null, default: `now()`, note: '작성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '수정 시각']
  deleted_at timestamptz [note: '삭제 시각 (soft delete)']

  indexes {
    (status, created_at) [name: 'idx_matches_status_created', note: 'WHERE deleted_at IS NULL']
    location [type: gist, name: 'idx_matches_location_gist']
  }

  Note: '이동 지원 요청 글 (작성 + 매칭 진행 상태 통합)'
}

Table match_applications {
  id bigserial [pk, note: '신청 ID']
  match_id bigint [not null, note: '대상 매칭 글 FK']
  applicant_id bigint [not null, note: '신청 봉사자 FK']
  message text [note: '신청 메시지 (자유 텍스트)']
  status application_status [not null, default: 'PENDING', note: 'PENDING/ACCEPTED/REJECTED']
  created_at timestamptz [not null, default: `now()`, note: '신청 시각']
  updated_at timestamptz [not null, default: `now()`, note: '상태 변경 시각']

  indexes {
    (match_id, applicant_id) [unique]
    match_id [name: 'uniq_match_applications_one_accepted', unique, note: "WHERE status = 'ACCEPTED' — 매칭당 ACCEPTED 1명 보장"]
    (match_id, status) [name: 'idx_match_applications_match_status']
  }

  Note: '봉사 신청 (작성자가 ACCEPT 시 매칭 성사). 한 매칭당 ACCEPTED 신청자는 1명만'
}

Table chat_rooms {
  id bigserial [pk, note: '채팅방 ID']
  application_id bigint [not null, unique, note: '대상 신청 FK (1:1). 첫 메시지 시 자동 생성.']
  created_at timestamptz [not null, default: `now()`, note: '생성 시각']

  Note: '신청 1건 = 채팅방 1개. 작성자 ↔ 신청자 1:1 스레드의 컨테이너.'
}

Table stores {
  id bigserial [pk, note: '매장 ID']
  name varchar(100) [not null, note: '상호명']
  address varchar(255) [not null, note: '주소']
  phone varchar(20) [note: '전화번호']
  category store_category [not null, note: '분류 (CAFE/RESTAURANT/PARK)']
  location "geography(Point, 4326)" [not null, note: '좌표 (PostGIS Point, SRID 4326)']
  operating_hours varchar(100) [note: '운영 시간 자유 문자열 (예: 10:00-22:00)']
  photo_urls "text[]" [not null, default: `'{}'`, note: '매장 사진 URL 배열 (배열 순서 = 표시 순서)']
  is_pet_allowed boolean [not null, default: true, note: '반려동물 출입 가능 여부 (관리자/시드 입력 - 공식 정보)']
  status store_status [not null, default: 'PENDING', note: 'PENDING(검수중) → APPROVED(노출) / REJECTED']
  created_by bigint [note: '등록자 FK (NULL = 시드 데이터)']
  rating_avg "numeric(3,2)" [not null, default: 0, note: '리뷰 평균 (denormalized)']
  rating_count integer [not null, default: 0, note: '리뷰 개수 (denormalized)']
  created_at timestamptz [not null, default: `now()`, note: '등록 시각']
  updated_at timestamptz [not null, default: `now()`, note: '수정 시각']
  deleted_at timestamptz [note: '삭제 시각 (soft delete)']

  indexes {
    location [type: gist, name: 'idx_stores_location_gist']
    (status, category) [name: 'idx_stores_status_category', note: 'WHERE deleted_at IS NULL']
  }

  Note: '반려동물 동반 가능 매장'
}


// =============================================================================
// T1 — 안정화 단계 테이블
// =============================================================================

Table volunteer_requests {
  id bigserial [pk, note: '요청 ID']
  user_id bigint [not null, note: '신청자 FK']
  message text [not null, note: '신청자가 작성한 자유 텍스트 한 줄']
  status volunteer_request_status [not null, default: 'PENDING', note: 'PENDING → APPROVED / REJECTED']
  processed_at timestamptz [note: '관리자 처리 시각']
  created_at timestamptz [not null, default: `now()`, note: '신청 시각']

  indexes {
    user_id [name: 'uniq_volunteer_requests_one_pending', unique, note: "WHERE status = 'PENDING' — PENDING 중복 방지"]
    (status, created_at) [name: 'idx_volunteer_requests_status_created']
  }

  Note: 'USER → VOLUNTEER 역할 전환 요청 (관리자 승인 대상)'
}

Table chat_messages {
  id bigserial [pk, note: '메시지 ID']
  chat_room_id bigint [not null, note: '소속 채팅방 FK']
  sender_id bigint [note: '발신자 FK (SET NULL — 탈퇴 후에도 메시지 유지)']
  content text [not null, note: '메시지 내용']
  read_at timestamptz [note: '상대방이 읽은 시각']
  created_at timestamptz [not null, default: `now()`, note: '발송 시각']

  indexes {
    (chat_room_id, created_at) [name: 'idx_chat_messages_room_created']
  }

  Note: '채팅 메시지. chat_rooms.application_id 유일성으로 한 신청 = 한 방.'
}

Table match_reviews {
  id bigserial [pk, note: '후기 ID']
  match_id bigint [not null, note: '대상 매칭 FK']
  reviewer_id bigint [note: '작성자 FK (SET NULL)']
  reviewee_id bigint [note: '대상자 FK (SET NULL)']
  rating smallint [not null, note: '평점 (1~5)']
  content text [note: '후기 내용']
  proof_image_urls "text[]" [note: '봉사 인증 사진 URL 배열']
  created_at timestamptz [not null, default: `now()`, note: '작성 시각']

  indexes {
    (match_id, reviewer_id) [unique]
    (reviewee_id, created_at) [name: 'idx_match_reviews_reviewee']
  }

  Note: '봉사 완료 후 양측이 서로 작성하는 후기 (CHECK: rating 1~5; reviewer_id <> reviewee_id when both not null)'
}

Table store_reviews {
  id bigserial [pk, note: '리뷰 ID']
  store_id bigint [not null, note: '대상 매장 FK']
  author_id bigint [note: '작성자 FK (SET NULL — 탈퇴 후에도 리뷰 유지)']
  rating smallint [not null, note: '평점 (1~5)']
  is_pet_allowed boolean [not null, note: '방문 당시 반려동물 출입 가능 여부 (작성자가 체크박스로 입력)']
  content text [not null, note: '리뷰 내용']
  created_at timestamptz [not null, default: `now()`, note: '작성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '수정 시각']

  indexes {
    (store_id, author_id) [unique]
    (store_id, created_at) [name: 'idx_store_reviews_store_created']
  }

  Note: '매장 별점·리뷰 (CHECK ck_store_reviews_rating: rating 1~5). 한 사용자 = 한 매장 1리뷰'
}

Table reports {
  id bigserial [pk, note: '신고 ID']
  reporter_id bigint [not null, note: '신고자 FK']
  target_user_id bigint [note: '신고 대상 사용자 FK (SET NULL)']
  report_type report_type [not null, default: 'USER', note: 'USER = 일반 신고, CHAT = 채팅 메시지 신고']
  chat_room_id bigint [note: 'CHAT 신고 시 대상 채팅방 FK (SET NULL)']
  message_id bigint [note: 'CHAT 신고 시 대상 메시지 FK (SET NULL)']
  reason text [not null, note: '신고 사유 (1~2,000자, 앱 레벨)']
  created_at timestamptz [not null, default: `now()`, note: '신고 시각']

  indexes {
    (reporter_id, target_user_id) [name: 'ux_reports_user_pair', unique, note: "WHERE report_type = 'USER' — 사용자 신고 중복 방지"]
    (target_user_id, created_at) [name: 'idx_reports_target_created']
  }

  Note: '사용자/채팅 신고. CHECK ck_reports_chat_refs: USER 가 아니면 chat_room_id/message_id 둘 다 필수.'
}

Table user_blocks {
  id bigserial [pk, note: '차단 레코드 ID']
  blocker_id bigint [not null, note: '차단한 사용자 FK']
  blocked_id bigint [not null, note: '차단된 사용자 FK']
  created_at timestamptz [not null, default: `now()`, note: '차단 시각']

  indexes {
    (blocker_id, blocked_id) [name: 'uq_user_blocks_pair', unique]
    (blocker_id, created_at) [name: 'idx_user_blocks_blocker']
  }

  Note: '사용자 차단 (CHECK ck_user_blocks_no_self: blocker_id <> blocked_id)'
}

Table store_favorites {
  id bigserial [pk, note: '즐겨찾기 레코드 ID']
  user_id bigint [not null, note: '사용자 FK']
  store_id bigint [not null, note: '매장 FK']
  created_at timestamptz [not null, default: `now()`, note: '등록 시각']

  indexes {
    (user_id, store_id) [name: 'uq_store_favorites_pair', unique]
    (user_id, created_at) [name: 'idx_store_favorites_user_created']
  }

  Note: '매장 즐겨찾기 (한 사용자 ↔ 한 매장 한 row)'
}

Table calendar_events {
  id bigserial [pk, note: '일정 ID']
  title varchar(200) [not null, note: '일정 제목']
  description text [note: '상세 설명']
  start_date date [not null, note: '시작일']
  end_date date [not null, note: '종료일 (>= start_date)']
  event_time time [note: '일정 시각 (선택)']
  created_at timestamptz [not null, default: `now()`, note: '레코드 생성 시각']
  updated_at timestamptz [not null, default: `now()`, note: '레코드 수정 시각']

  indexes {
    (start_date, end_date) [name: 'idx_calendar_events_dates']
  }

  Note: '시흥시 반려동물 정책 일정 (CHECK ck_calendar_events_dates: end_date >= start_date). 뉴스 본문은 외부 API+Redis 캐시라 별도 테이블 없음.'
}


// =============================================================================
// REFERENCES (외래키 관계)
// =============================================================================

Ref: devices.user_id > users.id [delete: cascade]

Ref: refresh_tokens.user_id > users.id [delete: cascade]
Ref: refresh_tokens.device_id > devices.id [delete: set null]

Ref: pets.user_id > users.id [delete: cascade]

Ref: notifications.user_id > users.id [delete: cascade]

Ref: notification_settings.user_id > users.id [delete: cascade]

Ref: matches.author_id > users.id [delete: cascade]
Ref: matches.pet_id > pets.id [delete: set null]

Ref: match_applications.match_id > matches.id [delete: cascade]
Ref: match_applications.applicant_id > users.id [delete: cascade]

Ref: chat_rooms.application_id > match_applications.id [delete: cascade]

Ref: chat_messages.chat_room_id > chat_rooms.id [delete: cascade]
Ref: chat_messages.sender_id > users.id [delete: set null]

Ref: match_reviews.match_id > matches.id [delete: cascade]
Ref: match_reviews.reviewer_id > users.id [delete: set null]
Ref: match_reviews.reviewee_id > users.id [delete: set null]

Ref: stores.created_by > users.id [delete: set null]
Ref: store_reviews.store_id > stores.id [delete: cascade]
Ref: store_reviews.author_id > users.id [delete: set null]

Ref: volunteer_requests.user_id > users.id [delete: cascade]

Ref: reports.reporter_id > users.id [delete: cascade]
Ref: reports.target_user_id > users.id [delete: set null]
Ref: reports.chat_room_id > chat_rooms.id [delete: set null]
Ref: reports.message_id > chat_messages.id [delete: set null]

Ref: user_blocks.blocker_id > users.id [delete: cascade]
Ref: user_blocks.blocked_id > users.id [delete: cascade]

Ref: store_favorites.user_id > users.id [delete: cascade]
Ref: store_favorites.store_id > stores.id [delete: cascade]
